스프링 시큐리티 폼 로그인 완성

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-security'  //스프링 시큐리티를 사용하기 위한 스타터
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'  //타임리프에서 스프링 시큐리티를 사용하기 위한 의존성 추가
+    testImplementation 'org.springframework.security:spring-security-test'  //스프링 시큐리티를 테스트하기 위한 의존성 추가
 //    testImplementation platform('org.junit:junit-bom:5.9.1')
 //    testImplementation 'org.junit.jupiter:junit-jupiter'
 }
