--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,15 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-security'  //스프링 시큐리티를 사용하기 위한 스타터
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'  //타임리프에서 스프링 시큐리티를 사용하기 위한 의존성 추가
     testImplementation 'org.springframework.security:spring-security-test'  //스프링 시큐리티를 테스트하기 위한 의존성 추가
-//    testImplementation platform('org.junit:junit-bom:5.9.1')
-//    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.projectlombok:lombok'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1' //자바 JWT 라이브러리
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'  //xml 문서와 Java 객체 간 매핍을 자동화
 }
 
 test {
