--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     testImplementation 'org.projectlombok:lombok'
     implementation 'io.jsonwebtoken:jjwt:0.9.1' //자바 JWT 라이브러리
     implementation 'javax.xml.bind:jaxb-api:2.3.1'  //xml 문서와 Java 객체 간 매핍을 자동화
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:'    //OAuth2를 사용하기 위한 스타터 추가
 }
 
 test {
